[gd_scene load_steps=2 format=3 uid="uid://dhmg7d1b50blk"]

[ext_resource type="Script" path="res://Components/Mouse_detector_component.gd" id="1_c4a3m"]

[node name="MouseDetectorComponent" type="Area2D"]
script = ExtResource("1_c4a3m")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
